--- a/css/style.css
+++ b/css/style.css
@@ -10897,7 +10897,11 @@ ul.list li {
 
 /* Placea Case Study */
 
-.discover-and-workshop {
+.placea-case-study {
+	background-color: #f98118;
+}
+
+.placea-solutions {
     background: url(../images/case-study/placea/placea-discovery-background.png);
     background-size: cover;
 }
@@ -10906,121 +10910,6 @@ ul.list li {
 	height: 100px;
 	width: 100px;
 	border-radius: 50%;
-}
-
-.process-model {
-	list-style: none;
-	padding: 0;
-	position: relative;
-	max-width: 100%;
-	margin: 20px auto 26px;
-	border: none;
-	z-index: 0;
-}
-
-.process-model li::after {
-	background: #FF742F none repeat scroll 0 0;
-	bottom: 0;
-	content: "";
-	display: block;
-	height: 4px;
-	margin: 0 auto;
-	position: absolute;
-	right: 110px;
-	top: 33px;
-	width: 85%;
-	z-index: -1;
-}
-
-.process-model li.visited::after {
-	background: #FF742F;
-}
-
-.process-model li:last-child::after {
-	width: 0;
-}
-
-.process-model li {
-	display: inline-block;
-	width: 14%;
-	text-align: center;
-	float: none;
-}
-
-.nav-tabs.process-model>li.active>a,
-.nav-tabs.process-model>li.active>a:hover,
-.nav-tabs.process-model>li.active>a:focus,
-.process-model li a:hover,
-.process-model li a:focus {
-	border: none;
-	background: transparent;
-
-}
-
-.process-model li a {
-	padding: 0;
-	border: none;
-	color: #606060;
-}
-
-.process-model li.active,
-.process-model li.visited {
-	color: #fff;
-
-}
-
-.process-model li.active a,
-.process-model li.active a:hover,
-.process-model li.active a:focus,
-.process-model li.visited a,
-.process-model li.visited a:hover,
-.process-model li.visited a:focus {
-	color: #fff;
-	background-color: #FF742F;
-}
-
-.process-model li.active p,
-.process-model li.visited p {
-	font-weight: 600;
-}
-
-.process-model li i {
-	display: block;
-	height: 68px;
-	width: 68px;
-	text-align: center;
-	margin: 0 auto;
-	background: #FF742F;
-	border: 2px solid #FF742F;
-	line-height: 65px;
-	font-size: 30px;
-	border-radius: 50%;
-	color: #fff;
-}
-
-.process-model li.active i,
-.process-model li.visited i {
-	background: #FF742F;
-}
-
-.process-model li p {
-	font-size: 14px;
-	margin-top: 11px;
-	color: #000;
-}
-
-.process-model.contact-us-tab li.visited a,
-.process-model.contact-us-tab li.visited p {
-	color: #606060 !important;
-	font-weight: normal
-}
-
-.process-model.contact-us-tab li::after {
-	display: none;
-}
-
-.process-model.contact-us-tab li.visited i {
-	border-color: #e5e5e5;
 }
 
 .placea-research-slider .owl-next {
@@ -11043,4 +10932,21 @@ ul.list li {
 .placea-app-visuals {
     background-image: url(../images/case-study/placea/plecea-visuals.png);
     background-size: cover;
+}
+
+/* Vero Case Study */
+
+.vero-case-study {
+	/* background-color: #ff8000; */
+	background-image: url(../images/case-study/vero/vero-background-banner.png);
+}
+
+.vero-banner-heading {
+	color: #ff8000;
+}
+
+.vero-resarch {
+	background-image: url(../images/case-study/vero/vero-back-research.png);
+	background-size: cover;
+	background-position: center;
 }
